--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <p>Entropic multipliers method for Langevin diffusion and weighted log Sobolev inequalities (with Patrick Cattiaux, Arnaud Guillin and Pierre Monmarché), <em>J. Funct. Anal.</em> 277, no. 11 (2019): 108288.</p>
 
-<p>&nbsp;</p><p><img src="lavin-hiver.png" referrerpolicy="no-referrer"></p><p>&nbsp;</p>
+<p>&nbsp;</p><p><img src="lavin-hiver.jpg" referrerpolicy="no-referrer"></p><p>&nbsp;</p>
       <footer class="site-footer">
         
       </footer>
