--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 <p>The kinetic Fokker-Planck equation with mean field interaction (with Arnaud Guillin, Wei Liu and Liming Wu),  <em>J. Math. Pures Appl.</em> (9) 150 (2021), 1–23.</p>
 
 <p>Entropic multipliers method for Langevin diffusion and weighted log Sobolev inequalities (with Patrick Cattiaux, Arnaud Guillin and Pierre Monmarché), <em>J. Funct. Anal.</em> 277, no. 11 (2019): 108288.</p>
-</div>
+
+<p>&nbsp;</p><p><img src="lavin-hiver.jpg" referrerpolicy="no-referrer"></p><p>&nbsp;</p>
+        </div>
 
       </div>
       
-   <p>&nbsp;</p><p><img src="lavin-hiver.jpg" referrerpolicy="no-referrer"></p><p>&nbsp;</p>
-      <footer class="site-footer">
-        
-      </footer>
+   
+      <footer class="site-footer">       </footer>
     </main>
   </body>
 </html>
