--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 
       </div>
       
-   
+   <option value="solarized.css">solarized</option>
+  
       <footer class="site-footer">       </footer>
     </main>
   </body>
