--- a/index.html
+++ b/index.html
@@ -67,10 +67,35 @@
         </div>
 
       </div>
-      
-   <option value="solarized.css">solarized</option>
-  
-      <footer class="site-footer">       </footer>
+     
     </main>
+  
+<footer class="site-footer">       </footer>
+<div class="sub-footer">
+  <div id="skin-switch-container">
+    This page was rendered with the <select id="skin-switch" onchange="changeSkin()">
+      <option value="solarized-dark.css">solarized-dark</option>
+      <option value="solarized-light.css">solarized-light</option>
+      <option value="solarized.css">solarized</option>
+      <option value="dark.css">dark</option>
+      <option value="auto.css">auto</option>
+      <option value="style.css">classic</option>
+    </select> skin of the Minima theme.
+  </div>
+</div>
+
+<script>
+  document.getElementById("skin-switch-container").style.display = "block";
+  var metaTag = document.getElementById("stylesheet");
+  var SSHref = metaTag.href;
+  var SSName = (SSHref.substring(SSHref.lastIndexOf('/') + 1));
+
+  document.getElementById("skin-switch").value = SSName;
+
+  function changeSkin() {
+    metaTag.href = SSHref.replace(SSName, event.target.value);
+  }
+</script>
+</body>
   </body>
 </html>
