--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 <p>No.92, Xidazhi Street,</p>
 
-<p>Harbin, 150001, PR China</p>
+<p>Harbin, 150001, P.R. China</p>
 
-<p>Email:  chaoenz@gmail.com (primary)
-   or  chaoenzhang@hit.edu.cn</p>
+<p>Email:  chaoenz at gmail.com (primary)
+   or  chaoenzhang at hit.edu.cn</p>
 
 <h2 id="personal-information">Personal information</h2>
 
