--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.8.0 -->
+  <meta name="google-site-verification" content="vF9WzZBkhvzg5OhNjETrx4hdYRHTeyA6OHj7sMMaAXs" />
   
   <body style="background-color:#fdf6e3;">
   
