--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <hr>
 <h2 id="publications">Publications</h2>
 
-<p>Uniform Poincaré and logarithmic Sobolev inequalities for mean field particle systems (with Arnaud Guillin, Wei Liu and Liming Wu), <em>Ann. Appl. Probab.</em> 32 (2022), no. 3, 1590–1614.</p>
+<p>Uniform Poincaré and logarithmic Sobolev inequalities for mean field particle systems (with Arnaud Guillin, Wei Liu and Liming Wu), <em>Ann. Appl. Probab.</em> 32 (2022), no. 3, 1590–1614. [<a href="https://arxiv.org/abs/1909.07051">arXiv<\a>] [<a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-32/issue-3/Uniform-Poincar%c3%a9-and-logarithmic-Sobolev-inequalities-for-mean-field-particle/10.1214/21-AAP1707.short">journal<\a>] </p>
 
-<p>Long-time behaviors of mean-field interacting particle systems related to McKean-Vlasov equations (with Wei Liu and Liming Wu), <em>Comm. Math. Phys.</em> 387 (2021), no. 1, 179–214.</p>
+<p>Long-time behaviors of mean-field interacting particle systems related to McKean-Vlasov equations (with Wei Liu and Liming Wu), <em>Comm. Math. Phys.</em> 387 (2021), no. 1, 179–214. [<a href="https://arxiv.org/abs/2007.09462v1">arXiv<\a>] [<a href="https://link.springer.com/article/10.1007/s00220-021-04198-5">journal<\a>]</p> 
 
-<p>The kinetic Fokker-Planck equation with mean field interaction (with Arnaud Guillin, Wei Liu and Liming Wu),  <em>J. Math. Pures Appl.</em> (9) 150 (2021), 1–23.</p>
+<p>The kinetic Fokker-Planck equation with mean field interaction (with Arnaud Guillin, Wei Liu and Liming Wu),  <em>J. Math. Pures Appl.</em> (9) 150 (2021), 1–23. [<a href="https://arxiv.org/abs/1912.02594">arXiv<\a>] [<a href="https://www.sciencedirect.com/science/article/pii/S0021782421000568">journal<\a>]</p> 
 
-<p>Entropic multipliers method for Langevin diffusion and weighted log Sobolev inequalities (with Patrick Cattiaux, Arnaud Guillin and Pierre Monmarché), <em>J. Funct. Anal.</em> 277, no. 11 (2019): 108288.</p>
+<p>Entropic multipliers method for Langevin diffusion and weighted log Sobolev inequalities (with Patrick Cattiaux, Arnaud Guillin and Pierre Monmarché), <em>J. Funct. Anal.</em> 277, no. 11 (2019): 108288.[<a href="https://arxiv.org/abs/1708.01058">arXiv<\a>] [<a href="https://www.sciencedirect.com/science/article/pii/S0022123619302514">journal<\a>]</p> 
 
 <p>&nbsp;</p><p><img src="lavin-hiver.jpg" referrerpolicy="no-referrer"></p><p>&nbsp;</p>
         </div>
