--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <hr>
 <h2 id="personal-information">Personal information</h2>
 
-<p>Currently I am a lecturer at <a href="http://im.hit.edu.cn/">Institute for Advanced Study in Mathematics of Harbin Institute of Technology</a>. I completed my PhD thesis in <a href="https://lmbp.uca.fr/">Laboratoire de Mathématiques Blaise Pascal (LMBP)</a> at <a href="https://uca.fr/">Université Clermont Auvergne</a> under the direction of Professors <a href="https://lmbp.uca.fr/~guillin/">Arnaud Guillin</a> and <a href="https://lmbp.uca.fr/~wuliming/">Liming Wu</a>.</p>
+<p>Currently I am a postdoctoral lecturer at <a href="http://im.hit.edu.cn/">Institute for Advanced Study in Mathematics of Harbin Institute of Technology</a>. I completed my PhD thesis in <a href="https://lmbp.uca.fr/">Laboratoire de Mathématiques Blaise Pascal (LMBP)</a> at <a href="https://uca.fr/">Université Clermont Auvergne</a> under the direction of Professors <a href="https://lmbp.uca.fr/~guillin/">Arnaud Guillin</a> and <a href="https://lmbp.uca.fr/~wuliming/">Liming Wu</a>.</p>
 
 <hr>
 <h2 id="research">Research</h2>
