--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <hr>
 <h2 id="publications">Publications</h2>
 
-<p>Hypocoercivity and global hypoellipticity for the kinetic Fokker-Planck equation in $H^k$ spaces, <em>Kinet. Relat. Models<em>, 2024, 17(3): 394-435. [<a href="https://arxiv.org/abs/2012.06253">arXiv</a>] [<a href="https://www.aimsciences.org/article/doi/10.3934/krm.2023027">journal</a>]<\p>
+<p>Hypocoercivity and global hypoellipticity for the kinetic Fokker-Planck equation in $H^k$ spaces, <em>Kinet. Relat. Models</em>, 2024, 17(3): 394-435. [<a href="https://arxiv.org/abs/2012.06253">arXiv</a>] [<a href="https://www.aimsciences.org/article/doi/10.3934/krm.2023027">journal</a>]</p>
 
 <p>Uniform Poincaré and logarithmic Sobolev inequalities for mean field particle systems (with Arnaud Guillin, Wei Liu and Liming Wu), <em>Ann. Appl. Probab.</em> 32 (2022), no. 3, 1590–1614. [<a href="https://arxiv.org/abs/1909.07051">arXiv</a>] [<a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-32/issue-3/Uniform-Poincar%c3%a9-and-logarithmic-Sobolev-inequalities-for-mean-field-particle/10.1214/21-AAP1707.short">journal</a>] </p>
 
