--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>Harbin, 150001, P.R. China</p>
 
 <p>Email:  chaoenz at gmail.com (primary)
-   or  chaoenzhang at hit.edu.cn</p>
+   or zce@mail.ustc.edu.cn (secondary) or chaoenzhang at hit.edu.cn (not checked regularly) </p>
 
 <hr>
 <h2 id="personal-information">Personal information</h2>
